--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,19 +1,19 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-frontend/node_modules
-frontend/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
-frontend/coverage
+coverage
 
 # next.js
-frontend/.next/
-frontend/out/
+.next/
+out/
 
 # production
-frontend/build
+build
 
 # misc
 .DS_Store
