Dockerize frontend and connect everything in docker-compose

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,17 @@
 FROM node
-WORKDIR /app
+
+RUN mkdir /install
+WORKDIR /install
 
 COPY package*.json ./
 RUN npm install
 
 COPY yarn.lock .
 RUN yarn install
+
+ENV NODE_PATH=/install/node_modules
+
+WORKDIR /app
 
 COPY . .
 
