--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "build-css": "cross-env NODE_ENV=production tailwindcss build app.css -o styles.css",
+    "dev-css": "cross-env NODE_ENV=development tailwindcss build app.css -o styles.css",
+    "next-dev": "next dev",
+    "dev": "concurrently \"npm run next-dev\" \"npm run dev-css\"",
+    "next-build": "next build",
+    "build": "concurrently \"npm run next-build\" \"npm run build-css\"",
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.3.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "concurrently": "^5.2.0",
+    "cross-env": "^7.0.2",
     "next": "9.4.0",
+    "postcss-cli": "^6.1.2",
+    "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "styled-components": "^5.1.0",
     "tailwindcss": "^1.4.6"
-  }
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-inline-react-svg": "^1.1.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-import-resolver-babel-module": "^5.1.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.0"
+  },
+  "license": "MIT"
 }
