--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@tailwindcss/ui": "^0.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "concurrently": "^5.2.0",
