--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
+    "isomorphic-unfetch": "^3.0.0",
+    "micro": "^9.3.4",
     "next": "9.4.0",
     "postcss-cli": "^6.1.2",
     "postcss-import": "^12.0.1",
