--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,15 +19,14 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
-    "isomorphic-unfetch": "^3.0.0",
-    "micro": "^9.3.4",
     "next": "9.4.0",
-    "postcss-cli": "^6.1.2",
+    "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.0",
+    "styled-jsx-plugin-postcss": "^2.0.1",
     "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
