--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,15 +18,19 @@
     "@tailwindcss/ui": "^0.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "concurrently": "^5.2.0",
+    "cookie": "^0.4.1",
     "cross-env": "^7.0.2",
-    "next": "9.4.0",
+    "js-cookie": "^2.2.1",
+    "next": "^9.4.0",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "styled-components": "^5.1.0",
     "styled-jsx-plugin-postcss": "^2.0.1",
+    "swr": "^0.2.0",
     "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
