--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.2",
     "js-cookie": "^2.2.1",
     "next": "^9.4.2",
+    "next-redux-wrapper": "^6.0.0",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
@@ -29,7 +30,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
+    "react-redux": "^7.2.0",
     "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0",
     "styled-jsx-plugin-postcss": "^2.0.1",
     "swr": "^0.2.2",
