--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@tailwindcss/ui": "^0.3.0",
+    "axios": "^0.19.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "concurrently": "^5.2.0",
     "cookie": "^0.4.1",
@@ -23,6 +24,7 @@
     "js-cookie": "^2.2.1",
     "next": "^9.4.2",
     "next-redux-wrapper": "^6.0.0",
+    "node-fetch": "^2.6.0",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
