Deploy staging with working frontend

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.terraform
+environment
+*.pem*
+
 # Created by https://www.gitignore.io/api/django
 # Edit at https://www.gitignore.io/?templates=django
 
