Staging backend and crawler mostly working

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .terraform
 environment
 *.pem*
+secrets*
 
 # Created by https://www.gitignore.io/api/django
 # Edit at https://www.gitignore.io/?templates=django
