--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3
+FROM python:3 AS dev
 WORKDIR /app
 
 COPY requirements.txt .
@@ -8,3 +8,12 @@ COPY . .
 
 CMD ./manage.py runserver
 EXPOSE 8000
+
+
+FROM dev as prod
+
+RUN pip install -r requirements.prod.txt
+
+RUN ./manage.py collectstatic --noinput
+
+CMD gunicorn server.wsgi:application --bind 0.0.0.0:8000 --workers=2 --threads=2
