--- a/deploy/docker-compose.staging.yml
+++ b/deploy/docker-compose.staging.yml
@@ -10,6 +10,12 @@ services:
       - "--certificatesresolvers.myresolver.acme.email=support@epicdesignlabs.com"
       - "--certificatesresolvers.myresolver.acme.storage=/data/acme.json"
       - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=http"
+      # middleware redirect
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      # global redirect to https
+      - "traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)"
+      - "traefik.http.routers.redirs.entrypoints=http"
+      - "traefik.http.routers.redirs.middlewares=redirect-to-https"
     ports:
       - 80:80
       - 443:443
@@ -18,7 +24,6 @@ services:
       - certificate-data:/data
   backend:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-backend
-    command: ./docker.dev.sh
     links:
       - db
       - crawler
@@ -27,6 +32,8 @@ services:
       - "traefik.http.routers.backend.rule=(Host(`linkapp.epicsandbox.com`) && (PathPrefix(`/api/`)||PathPrefix(`/auth/`)||PathPrefix(`/admin/`)||PathPrefix(`/static/`)))"
       - "traefik.http.routers.backend.tls=true"
       - "traefik.http.routers.backend.tls.certresolver=myresolver"
+    environment:
+      ENV: staging
   frontend:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-frontend
     labels:
@@ -36,14 +43,10 @@ services:
       - "traefik.http.routers.frontend.tls.certresolver=myresolver"
   crawler:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-crawler
-    volumes:
-      - ./crawler:/app
     links:
       - db
   db:
     image: postgres
-    environment:
-      POSTGRES_PASSWORD: crawldev
     volumes:
       - db-data:/var/lib/postgresql/data
 
