--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   backend:
     build:
       context: ./backend
+      target: dev
     image: crawl-app-backend
     stdin_open: false
     tty: true
@@ -41,6 +42,7 @@ services:
   crawler:
     build:
       context: ./crawler
+      target: dev
     image: crawl-app-crawler
     volumes:
       - ./crawler:/app
