--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "cookie": "^0.4.1",
     "cross-env": "^7.0.2",
     "js-cookie": "^2.2.1",
+    "moment": "^2.26.0",
     "next": "^9.4.2",
     "next-redux-wrapper": "^6.0.0",
     "node-fetch": "^2.6.0",
@@ -30,8 +31,10 @@
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
