--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@tailwindcss/ui": "^0.3.0",
-    "axios": "^0.19.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "js-cookie": "^2.2.1",
     "moment": "^2.26.0",
     "next": "^9.4.2",
+    "next-iron-session": "^4.1.6",
     "next-redux-wrapper": "^6.0.0",
     "node-fetch": "^2.6.0",
     "postcss-cli": "^7.1.1",
