--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@tailwindcss/ui": "^0.3.0",
+    "axios": "^0.19.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
@@ -32,6 +33,7 @@
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-html-parser": "^2.0.2",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-transition-group": "^4.4.1",
