--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -21,18 +21,20 @@
     "sourceType": "module"
   },
   "plugins": [
-    "react"
+    "react",
+    "better-styled-components"
   ],
   "rules": {
-    "no-underscore-dangle": "off",
-    "import/prefer-default-export": "off",
-    "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": "off",
-    "react/prefer-stateless-function": "off",
-    "react/jsx-pascal-case": "off",
-    "jsx-a11y/anchor-is-valid": "off",
-    "react/state-in-constructor": "off",
-    "react/prop-types": "off",
+    "no-underscore-dangle": "on",
+    "import/prefer-default-export": "on",
+    "react/react-in-jsx-scope": "on",
+    "react/jsx-filename-extension": "on",
+    "react/prefer-stateless-function": "on",
+    "react/jsx-pascal-case": "on",
+    "jsx-a11y/anchor-is-valid": "on",
+    "react/state-in-constructor": "on",
+    "react/prop-types": "on",
+    "better-styled-components/sort-declarations-alphabetically": 2,
     "quotes": [
       2,
       "double",
