--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build-css": "cross-env NODE_ENV=production tailwindcss build app.css -o styles.css",
-    "dev-css": "cross-env NODE_ENV=development tailwindcss build app.css -o styles.css",
+    "build-css": "cross-env NODE_ENV=production tailwindcss build css/app.css -o css/styles.css",
+    "dev-css": "cross-env NODE_ENV=development tailwindcss build css/app.css -o css/styles.css",
     "next-dev": "next dev",
     "dev": "concurrently \"npm run next-dev\" \"npm run dev-css\"",
     "next-build": "next build",
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@tailwindcss/ui": "^0.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "js-cookie": "^2.2.1",
@@ -40,8 +41,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0",
     "styled-jsx-plugin-postcss": "^2.0.1",
-    "swr": "^0.2.2",
-    "tailwindcss": "^1.4.6"
+    "swr": "^0.2.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -53,7 +53,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.0"
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "tailwindcss": "^1.4.6"
   },
   "license": "MIT"
 }
