--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,6 +6,7 @@
   },
   "parser": "babel-eslint",
   "extends": [
+    "plugin:react-hooks/recommended",
     "plugin:react/recommended",
     "airbnb"
   ],
