--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react-html-parser": "^2.0.2",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "styled-components": "^5.1.1",
     "styled-jsx-plugin-postcss": "^2.0.1",
