--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "styled-components": "^5.1.1",
     "styled-jsx-plugin-postcss": "^2.0.1",
     "swr": "^0.2.3",
+    "url-parse": "^1.4.7",
     "window": "^4.2.7"
   },
   "devDependencies": {
