Add react-tooltip and react-data-table-component npm packages

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,10 +33,12 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-data-table-component": "^6.9.6",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
+    "react-tooltip": "^4.2.7",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
