convert EOL type to LF

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,10 @@ services:
     image: postgres
     environment:
       POSTGRES_PASSWORD: crawldev
+    command:
+      - "postgres"
+      - "-c"
+      - "listen_addresses=*"
     volumes:
       - db-data:/var/lib/postgresql/data
 
