--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@tailwindcss/ui": "^0.3.0",
+    "babel-plugin-add-react-displayname": "0.0.5",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.7",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "js-cookie": "^2.2.1",
+    "logrocket": "^1.0.10",
+    "logrocket-react": "^4.0.1",
     "moment": "^2.27.0",
     "next": "^9.4.4",
     "node-fetch": "^2.6.0",
