--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
     "react-moment": "^0.9.7",
+    "react-player": "^2.5.0",
     "react-redux": "^7.2.0",
     "react-tooltip": "^4.2.7",
     "react-transition-group": "^4.4.1",
