--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-data-table-component": "^6.9.6",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
+    "react-loading-skeleton": "^2.1.1",
     "react-moment": "^0.9.7",
     "react-player": "^2.5.0",
     "react-redux": "^7.2.0",
