--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -16,26 +16,24 @@ EXPOSE 3000
 
 
 FROM dev AS build
-ARG SERVICE=
 
 RUN mkdir /deps
 
-RUN go build
+RUN go build -o /service
 
 # auto figure out cgo dependencies
-RUN ldd /app/$SERVICE/$SERVICE | tr -s '[:blank:]' '\n' | grep '^/' | xargs -L 1 -I % cp --parents % /deps
+RUN ldd /service | tr -s '[:blank:]' '\n' | grep '^/' | xargs -L 1 -I % cp --parents % /deps
 
 
 FROM scratch AS prod
-ARG SERVICE=
 
 WORKDIR /
 
 COPY --from=build /usr/share/zoneinfo /usr/share/zoneinfo
 COPY --from=build /etc/ssl/certs /etc/ssl/certs
-COPY --from=build /app/$SERVICE /
+COPY --from=build /service /
 COPY --from=build /deps /
 
 EXPOSE 8000
 
-CMD ["/$SERVICE"]
+CMD ["/service"]
