--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.27.0",
     "next": "^9.4.4",
     "node-fetch": "^2.6.0",
+    "nprogress": "^0.2.0",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
