--- a/frontend/public/data/settings-pages.json
+++ b/frontend/public/data/settings-pages.json
@@ -22,9 +22,9 @@
         "icon": "M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"
       },
       {
-        "title": "Subscription",
-        "slug": "subscription",
-        "url": "/dashboard/settings/subscription",
+        "title": "Subscriptions",
+        "slug": "subscriptions",
+        "url": "/dashboard/settings/subscriptions",
         "icon": "M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z"
       }
     ]
