Update production config

--- a/deploy/docker-compose.production.0.yml
+++ b/deploy/docker-compose.production.0.yml
@@ -3,6 +3,8 @@ services:
   backend:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-backend
     restart: always
+    ports:
+      - "8001:8000"
     links:
       - crawler
     environment:
@@ -10,6 +12,8 @@ services:
   frontend:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-frontend
     restart: always
+    ports:
+      - "8000:3000"
   crawler:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-crawler
     restart: always
