--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,24 +12,40 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build and push backend
       run: make build-push-backend
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: us-east-1
   build_frontend:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build and push frontend
       run: make build-push-frontend
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: us-east-1
   build_crawler:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build and push crawler
       run: make build-push-crawler
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: us-east-1
   build_scheduler:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build and push scheduler
       run: make build-push-scheduler
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: us-east-1
   deploy:
     runs-on: ubuntu-latest
     needs: [build_backend, build_frontend, build_crawler, build_scheduler]
