--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,20 +15,20 @@
     "child_process": false
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-brands-svg-icons": "^5.13.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@tailwindcss/ui": "^0.3.0",
+    "@tailwindcss/ui": "^0.3.1",
     "babel-plugin-add-react-displayname": "0.0.5",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-styled-components": "^1.10.7",
-    "concurrently": "^5.2.0",
+    "babel-plugin-styled-components": "^1.11.1",
+    "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
     "js-cookie": "^2.2.1",
-    "logrocket": "^1.0.10",
+    "logrocket": "^1.0.11",
     "logrocket-react": "^4.0.1",
     "moment": "^2.27.0",
-    "next": "^9.4.4",
+    "next": "^9.5.2",
     "node-fetch": "^2.6.0",
     "nprogress": "^0.2.0",
     "postcss-cli": "^7.1.1",
@@ -37,16 +37,17 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-data-table-component": "^6.9.6",
+    "react-data-table-component": "^6.11.0",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
     "react-loading-skeleton": "^2.1.1",
     "react-moment": "^0.9.7",
     "react-password-strength-bar": "^0.3.2",
-    "react-player": "^2.5.0",
-    "react-redux": "^7.2.0",
-    "react-tooltip": "^4.2.7",
+    "react-player": "^2.6.0",
+    "react-redux": "^7.2.1",
+    "react-tooltip": "^4.2.8",
     "react-transition-group": "^4.4.1",
+    "react-vis": "^1.11.7",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.1.1",
@@ -62,11 +63,11 @@
     "eslint-config-airbnb": "^18.2.0",
     "eslint-import-resolver-babel-module": "^5.1.2",
     "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "tailwindcss": "^1.4.6"
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "tailwindcss": "^1.6.2"
   },
   "license": "MIT"
 }
