--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-add-react-displayname": "0.0.5",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "bytes": "^3.1.0",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "js-cookie": "^2.2.1",
