--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@loadable/component": "^5.13.1",
     "@tailwindcss/ui": "^0.3.1",
+    "apexcharts": "^3.20.0",
     "babel-plugin-add-react-displayname": "0.0.5",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.7",
@@ -37,6 +39,7 @@
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-copy-to-clipboard": "^5.0.2",
     "react-data-table-component": "^6.9.6",
     "react-dom": "^16.13.1",
@@ -46,9 +49,11 @@
     "react-password-strength-bar": "^0.3.2",
     "react-player": "^2.6.0",
     "react-redux": "^7.2.1",
+    "react-resize-detector": "^5.0.7",
     "react-scripts": "^3.4.3",
     "react-tooltip": "^4.2.8",
     "react-transition-group": "^4.4.1",
+    "react-vis": "^1.11.7",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.1.1",
