--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,12 +6,14 @@
   },
   "parser": "babel-eslint",
   "extends": [
+    "eslint:recommended",
     "plugin:react-hooks/recommended",
     "plugin:react/recommended",
     "airbnb"
   ],
   "globals": {
     "Atomics": "readonly",
+    "React": "writable",
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
