--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev-css": "cross-env NODE_ENV=development tailwindcss build css/app.css -o css/styles.css",
     "next-dev": "NODE_OPTIONS='--inspect' next dev",
     "dev": "concurrently \"npm run next-dev\" \"npm run dev-css\"",
-    "next-build": "next build",
+    "next-build": "next build --profile",
     "build": "concurrently \"npm run next-build\" \"npm run build-css\"",
     "start": "next start"
   },
@@ -30,20 +30,20 @@
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
     "js-cookie": "^2.2.1",
-    "logrocket": "^1.0.11",
+    "logrocket": "^1.0.12",
     "logrocket-react": "^4.0.1",
     "moment": "^2.27.0",
-    "next": "^9.4.4",
+    "next": "^9.5.3",
     "node-fetch": "^2.6.0",
     "nprogress": "^0.2.0",
-    "postcss-cli": "^7.1.1",
+    "postcss-cli": "^7.1.2",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-data-table-component": "^6.11.1",
+    "react-data-table-component": "^6.11.2",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
     "react-imask": "^6.0.5",
@@ -54,7 +54,7 @@
     "react-redux": "^7.2.1",
     "react-resize-detector": "^5.0.7",
     "react-scripts": "^3.4.3",
-    "react-tooltip": "^4.2.8",
+    "react-tooltip": "^4.2.9",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -76,7 +76,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
-    "tailwindcss": "^1.7.3"
+    "tailwindcss": "^1.7.6"
   },
   "license": "MIT"
 }
