Add memory limits to docker compose

--- a/deploy/docker-compose.production.yml
+++ b/deploy/docker-compose.production.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "2.4"
 services:
   backend:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-backend
@@ -14,11 +14,13 @@ services:
       options:
         max-size: "1M"
         max-file: "3"
+    mem_limit: 256M
   frontend:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-frontend
     restart: always
     ports:
       - "8000:3000"
+    mem_limit: 64M
   crawler:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-crawler
     restart: always
@@ -29,7 +31,9 @@ services:
       options:
         max-size: "1M"
         max-file: "3"
+    mem_limit: 256M
   scheduler:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-backend
     command: sleep 3600
     restart: always
+    mem_limit: 64M
