--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "react-imask": "^6.0.5",
     "react-loading-skeleton": "^2.1.1",
     "react-moment": "^0.9.7",
+    "react-paginate": "^6.4.0",
     "react-password-strength-bar": "^0.3.2",
     "react-player": "^2.6.1",
     "react-redux": "^7.2.1",
