--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,29 +26,21 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-1
-  build_crawler:
+  build_go:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build and push crawler
-      run: make build-push-crawler
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: us-east-1
-  build_scheduler:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build and push scheduler
-      run: make build-push-scheduler
+    - name: Test go
+      run: make test-go
+    - name: Build and push go
+      run: make build-push-go
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-1
   deploy:
     runs-on: ubuntu-latest
-    needs: [build_backend, build_frontend, build_crawler, build_scheduler]
+    needs: [build_backend, build_frontend, build_go]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
