--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,10 +28,13 @@
     "babel-plugin-styled-components": "^1.11.1",
     "bytes": "^3.1.0",
     "concurrently": "^5.3.0",
+    "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
+    "formik": "^2.1.5",
     "js-cookie": "^2.2.1",
     "logrocket": "^1.0.11",
     "logrocket-react": "^4.0.1",
+    "mailgun.js": "^2.0.1",
     "moment": "^2.27.0",
     "next": "^9.4.4",
     "node-fetch": "^2.6.0",
@@ -64,7 +67,8 @@
     "styled-jsx-plugin-postcss": "^2.0.1",
     "swr": "^0.2.3",
     "url-parse": "^1.4.7",
-    "window": "^4.2.7"
+    "window": "^4.2.7",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
