--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
+    "rc-pagination": "^3.0.4",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
     "react-copy-to-clipboard": "^5.0.2",
@@ -49,7 +50,6 @@
     "react-imask": "^6.0.5",
     "react-loading-skeleton": "^2.1.1",
     "react-moment": "^0.9.7",
-    "react-paginate": "^6.4.0",
     "react-password-strength-bar": "^0.3.2",
     "react-player": "^2.6.1",
     "react-redux": "^7.2.1",
