--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "formik": "^2.1.5",
     "js-cookie": "^2.2.1",
     "logrocket": "^1.0.11",
