Force postgres version to 12 on staging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
     # environment:
     #   - LOG_SQL=true
   db:
-    image: postgres
+    image: postgres:12
     environment:
       POSTGRES_PASSWORD: crawldev
     command:
