--- a/deploy/docker-compose.staging.yml
+++ b/deploy/docker-compose.staging.yml
@@ -76,7 +76,7 @@ services:
       ENV: staging
     mem_limit: 64M
   db:
-    image: postgres
+    image: postgres:12
     restart: always
     volumes:
       - db-data:/var/lib/postgresql/data
