--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
     "@tailwindcss/ui": "^0.3.1",
+    "@tailwindui/react": "^0.1.1",
     "apexcharts": "^3.20.0",
     "babel-plugin-add-react-displayname": "0.0.5",
     "babel-plugin-module-resolver": "^4.0.0",
