Replace every npm instance to yarn

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ RUN mkdir /install
 WORKDIR /install
 
 COPY package*.json ./
-RUN npm install
+RUN yarn
 
 ENV NODE_PATH=/install/node_modules
 
@@ -20,6 +20,6 @@ EXPOSE 3000
 # build prod assets
 FROM dev AS prod
 
-RUN npm run build
+RUN yarn run build
 
-CMD npm start
+CMD yarn start
