--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,9 @@
     "build-css": "cross-env NODE_ENV=production tailwindcss build css/app.css -o css/styles.css",
     "dev-css": "cross-env NODE_ENV=development tailwindcss build css/app.css -o css/styles.css",
     "next-dev": "NODE_OPTIONS='--inspect' next dev",
-    "dev": "concurrently \"npm run next-dev\" \"npm run dev-css\"",
+    "dev": "concurrently \"yarn run next-dev\" \"yarn run dev-css\"",
     "next-build": "next build --profile",
-    "build": "concurrently \"npm run next-build\" \"npm run build-css\"",
+    "build": "concurrently \"yarn run next-build\" \"yarn run build-css\"",
     "start": "next start"
   },
   "browser": {
