Add uptimer service

--- a/deploy/docker-compose.production.0.yml
+++ b/deploy/docker-compose.production.0.yml
@@ -38,3 +38,14 @@ services:
     environment:
       ENV: production
     mem_limit: 64M
+  uptimer:
+    image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-uptimer
+    restart: always
+    environment:
+      ENV: production
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1M"
+        max-file: "3"
+    mem_limit: 64M
