--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,11 +5,11 @@ WORKDIR /app
 
 COPY package*.json ./
 COPY yarn.lock ./
-RUN yarn install --frozen-lockfile
+RUN yarn install
 
 COPY . .
 
-EXPOSE 3000
+EXPOSE 3000 3030
 
 
 # build prod assets
