Refactor site information and delete site components, update personal component and main stylesheet

--- a/frontend/public/label/pages/site/settings.json
+++ b/frontend/public/label/pages/site/settings.json
@@ -18,13 +18,13 @@
 		"label": "New Site URL Link"
 	},
 	{
-		"label": "Update Site"
+		"label": "Update"
 	},
 	{
-		"label": "Cancel Site Update"
+		"label": "Cancel"
 	},
 	{
-		"label": "Save Changes"
+		"label": "Save"
 	},
 	{
 		"label": "Delete Site"
