--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,3 +60,30 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-1
+  deploy_ecs:
+    runs-on: ubuntu-latest
+    needs: [build_backend, build_frontend, build_go]
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.6'
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Download crawler task definition
+      run: |
+        aws ecs describe-task-definition --task-definition prod_crawler_task --query taskDefinition > crawler-task-definition.json
+
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: crawler-task-definition.json
+        service: prod_crawler_service
+        cluster: prod_fargate
+        wait-for-service-stability: true
