--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/ui": "^0.3.1",
     "@tailwindui/react": "^0.1.1",
     "apexcharts": "^3.22.0",
+    "axios": "^0.21.1",
     "babel-plugin-add-react-displayname": "0.0.5",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.11.1",
