--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -28,14 +28,14 @@
   ],
   "rules": {
     "no-underscore-dangle": 1,
-    "import/prefer-default-export": "on",
-    "react/react-in-jsx-scope": "on",
-    "react/jsx-filename-extension": "on",
-    "react/prefer-stateless-function": "on",
-    "react/jsx-pascal-case": "on",
-    "jsx-a11y/anchor-is-valid": "on",
-    "react/state-in-constructor": "on",
-    "react/prop-types": "on",
+    "import/prefer-default-export": 1,
+    "react/react-in-jsx-scope": 1,
+    "react/jsx-filename-extension": 1,
+    "react/prefer-stateless-function": 1,
+    "react/jsx-pascal-case": 1,
+    "jsx-a11y/anchor-is-valid": 1,
+    "react/state-in-constructor": 1,
+    "react/prop-types": 1,
     "better-styled-components/sort-declarations-alphabetically": 2,
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
