Uninstall nprogress, update script commands

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build-css": "cross-env NODE_ENV=production tailwindcss build css/app.css -o css/styles.css",
-    "dev-css": "cross-env NODE_ENV=development tailwindcss build css/app.css -o css/styles.css",
+    "build-css": "cross-env NODE_ENV=production tailwindcss build -o ./public/styles/app.css",
+    "dev-css": "cross-env NODE_ENV=development tailwindcss build -o ./public/styles/app.css",
     "next-dev": "NODE_OPTIONS='--inspect' next dev",
     "dev": "concurrently \"yarn run next-dev\" \"yarn run dev-css\"",
-    "next-build": "next build --profile",
+    "next-build": "next build --profile --debug",
     "build": "concurrently \"yarn run next-build\" \"yarn run build-css\"",
     "start": "next start",
     "storybook": "start-storybook -p 6006 -c ./.storybook/ -s ./",
@@ -43,7 +43,6 @@
     "moment": "^2.29.1",
     "next": "^9.5.3",
     "node-fetch": "^2.6.1",
-    "nprogress": "^0.2.0",
     "postcss-cli": "^7.1.2",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
