--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "logrocket-react": "^4.0.1",
     "moment": "^2.29.1",
     "next": "^9.5.3",
+    "next-seo": "^4.17.0",
     "node-fetch": "^2.6.1",
     "postcss-cli": "^7.1.2",
     "postcss-import": "^12.0.1",
