--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -8,19 +8,8 @@
   "extends": [
     "plugin:react-hooks/recommended",
     "plugin:react/recommended",
-    "airbnb"
+    "nextjs"
   ],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
   "plugins": [
     "react",
     "better-styled-components",
@@ -46,10 +35,5 @@
         "avoidEscape": true
       }
     ]
-  },
-  "settings": {
-    "import/resolver": {
-      "babel-module": {}
-    }
   }
 }
