--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -10,6 +10,11 @@ services:
       POSTGRES_PASSWORD: crawldev
     volumes:
       - db-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   db-data:
