Fix healthy condition for test db

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,7 +3,8 @@ services:
   backend:
     image: 400936075989.dkr.ecr.us-east-1.amazonaws.com/crawl-app-backend
     depends_on:
-      - db
+      db:
+        condition: service_healthy
   db:
     image: postgres:12
     environment:
