Fix prod image backend build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,6 +19,6 @@ FROM base as prod
 
 RUN pip install -r requirements.prod.txt
 
-RUN ./manage.py collectstatic --noinput
+RUN ENV=production ./manage.py collectstatic --noinput
 
 CMD gunicorn server.wsgi:application --bind 0.0.0.0:8000 --workers=2 --threads=2 --access-logfile "-" --keep-alive 65
