--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,8 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build-css": "cross-env NODE_ENV=production tailwindcss build -o ./public/styles/app.css",
-    "dev-css": "cross-env NODE_ENV=development tailwindcss build -o ./public/styles/app.css",
-    "next-dev": "NODE_OPTIONS='--inspect' next dev",
-    "dev": "concurrently \"yarn run next-dev\" \"yarn run dev-css\"",
-    "next-build": "next build --profile --debug",
-    "build": "concurrently \"yarn run next-build\" \"yarn run build-css\"",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "build": "next build --profile --debug",
     "start": "next start",
     "storybook": "start-storybook -p 6006 -c ./.storybook/ -s ./",
     "build-storybook": "build-storybook -c ./.storybook/ -s ./"
@@ -17,64 +13,72 @@
   "browser": {
     "child_process": false
   },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@loadable/component": "^5.14.1",
     "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.11.0",
-    "@tailwindcss/ui": "^0.3.1",
+    "@stripe/stripe-js": "^1.13.1",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/line-clamp": "^0.2.0",
+    "@tailwindcss/typography": "^0.4.0",
+    "@tailwindcss/ui": "^0.7.2",
     "@tailwindui/react": "^0.1.1",
     "apexcharts": "^3.22.0",
+    "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
     "bytes": "^3.1.0",
-    "concurrently": "^5.3.0",
-    "core-js": "^3.6.5",
-    "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0",
+    "concurrently": "^6.0.0",
+    "core-js": "^3.9.1",
     "formik": "^2.2.0",
     "js-cookie": "^2.2.1",
     "logrocket": "^1.0.12",
     "logrocket-react": "^4.0.1",
     "moment": "^2.29.1",
-    "next": "^9.5.3",
+    "next": "^10.0.7",
     "next-seo": "^4.17.0",
     "node-fetch": "^2.6.1",
-    "postcss-cli": "^7.1.2",
-    "postcss-import": "^12.0.1",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "rc-pagination": "^3.1.3",
-    "react": "^16.8.6",
+    "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-copy-to-clipboard": "^5.0.2",
     "react-data-table-component": "^6.11.2",
-    "react-dom": "^16.8.6",
+    "react-dom": "^17.0.1",
     "react-html-parser": "^2.0.2",
     "react-imask": "^6.0.5",
     "react-loading-skeleton": "^2.1.1",
-    "react-moment": "^0.9.7",
+    "react-moment": "^1.1.1",
     "react-password-strength-bar": "^0.3.2",
     "react-player": "^2.6.2",
     "react-redux": "^7.2.1",
-    "react-resize-detector": "^5.2.0",
-    "react-responsive": "^8.1.0",
-    "react-scripts": "^3.4.4",
+    "react-resize-detector": "^6.6.1",
+    "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.9",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "stripe": "^8.115.0",
     "styled-components": "^5.2.0",
-    "styled-jsx-plugin-postcss": "^2.0.1",
-    "swr": "^0.2.3",
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "swr": "^0.4.2",
     "url-parse": "^1.4.7",
     "window": "^4.2.7",
-    "yup": "^0.29.3"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.13.8",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
@@ -85,19 +89,21 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-add-react-displayname": "^0.0.5",
-    "babel-plugin-inline-react-svg": "^1.1.1",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "babel-plugin-macros": "^3.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-react-require": "^3.1.3",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.21.0",
     "eslint-import-resolver-babel-module": "^5.2.0",
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
+    "react-is": "^17.0.1",
     "styled-jsx-plugin-sass": "^1.0.0",
-    "tailwindcss": "^1.7.6"
+    "tailwindcss": "^2.0.3",
+    "twin.macro": "^2.2.3"
   }
 }
