--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,11 @@
 FROM python:3 AS base
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y \
+	postgresql-client \
+	vim-tiny \
+ && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
