Update dashboard and settings pages data

--- a/frontend/public/data/settings-pages.json
+++ b/frontend/public/data/settings-pages.json
@@ -12,6 +12,10 @@
     ]
   },
   {
+    "category": "Sites",
+    "slug": "sites"
+  },
+  {
     "category": "Account",
     "slug": "account",
     "links": [
