Fix settings menu sidebar

--- a/frontend/public/data/settings-pages.json
+++ b/frontend/public/data/settings-pages.json
@@ -6,7 +6,7 @@
       {
         "title": "Go Back to Sites",
         "slug": "go-back-to-sites",
-        "url": "/sites",
+        "url": "/",
         "icon": "M10 19l-7-7m0 0l7-7m-7 7h18"
       }
     ]
