Update labels on both settings and site pages

--- a/frontend/public/data/settings-pages.json
+++ b/frontend/public/data/settings-pages.json
@@ -12,8 +12,8 @@
     ]
   },
   {
-    "category": "Sites",
-    "slug": "sites"
+    "category": "Site Selection",
+    "slug": "site-selection"
   },
   {
     "category": "Account",
